# gbkfit

./: .gitignore  .gitmodules  LICENSE  README.rst  pyproject.toml  setup.py
.github/workflows/: cicd.yml
docs/source/: concepts.rst  conf.py  devguide.rst  index.rst  install.rst  overview.rst  usrguide.rst
src/gbkfit/: __init__.py  broker.py  data.py  dataset.py  dmodel.py  driver.py  fitter.py  gmodel.py  model.py  params.py  psflsf.py
src/gbkfit/apps/: cli.py  gui.py
src/gbkfit/broker/: __init__.py  broker.py
src/gbkfit/broker/brokers/: dask.py  none.py  ray.py
src/gbkfit/brokers/: __init__.py  _utils.py  dask.py  none.py  ray.py
src/gbkfit/dataset/: __init__.py  _detail.py  core.py  data.py  dataset.py
src/gbkfit/dataset/datasets/: __init__.py  _detail.py  image.py  lslit.py  mmaps.py  scube.py
src/gbkfit/datasets/: image.py  lslit.py  mmaps.py  scube.py
src/gbkfit/dmodel/: __init__.py  dmodel.py
src/gbkfit/dmodel/dmodels/: __init__.py  _dcube.py  image.py  mmaps.py  scube.py
src/gbkfit/dmodels/: _dcube.py  image.py  lslit.py  mmaps.py  scube.py
src/gbkfit/driver/: __init__.py  _detail.py  backend.py  core.py  driver.py  modules.py  utils.py
src/gbkfit/driver/drivers/: __init__.py
src/gbkfit/driver/drivers/_detail/: native.py
src/gbkfit/driver/drivers/cuda/: __init__.py  _backend.py  driver.py
src/gbkfit/driver/drivers/host/: __init__.py  (+2 more)
src/gbkfit/drivers/: __init__.py  _detail.py
src/gbkfit/drivers/cuda/: driver.py
src/gbkfit/drivers/host/: driver.py
src/gbkfit/drivers/openmp/: driver.py
src/gbkfit/fitter/: fitter.py  likelihood.py  prior.py
src/gbkfit/fitter/fitters/: _detail.py
src/gbkfit/fitters/dynesty/: dynesty.py
src/gbkfit/fitters/lmfit/: __init__.py  lmfit.py
src/gbkfit/fitters/pygmo/: pygmo.py
src/gbkfit/fitters/scipy/: __init__.py  _detail.py
src/gbkfit/fitting/: __init__.py  core.py  fitter.py  fitutils.py  objective.py  params.py  prior.py  result.py  utils.py
src/gbkfit/fitting/fitters/: __init__.py
src/gbkfit/fitting/objectives/: __init__.py
src/gbkfit/fitting/prior/: __init__.py  prior_dict.py  priors.py
src/gbkfit/fitting/priors/: core.py
src/gbkfit/gmodel/: __init__.py
src/gbkfit/gmodel/gmodels/: _common.py  _disk.py  _mcdisk.py  _smdisk.py  density_mcdisk_3d.py  density_smdisk_2d.py  density_smdisk_3d.py  kinematics_2d.py  spectral_mcdisk_3d.py  spectral_smdisk_2d.py  spectral_smdisk_3d.py  traits.py
src/gbkfit/gmodels/: _common.py  _disk.py  _mcdisk.py  _smdisk.py  density_smdisk_2d.py  density_smdisk_3d.py  intensity_2d.py  intensity_3d.py  kinematics_3d.py  spectral_smdisk_2d.py  traits.py
src/gbkfit/math/: interpolation.py  likelihood.py  math.py
src/gbkfit/model/: __init__.py  core.py  dmodel.py  driver.py  gmodel.py  model.py  register.py  utils.py
src/gbkfit/model/brokers/: __init__.py  dask.py  none.py  ray.py
src/gbkfit/model/dmodels/: __init__.py  _dcube.py  _detail.py  image.py  lslit.py  mmaps.py  scube.py
src/gbkfit/model/gmodels/: __init__.py  _common.py  _detail.py  _disk.py  _mcdisk.py  _smdisk.py  brightness_mcdisk_3d.py  brightness_smdisk_2d.py  brightness_smdisk_3d.py  common.py  core.py  density_mcdisk_3d.py  density_smdisk_2d.py  density_smdisk_3d.py  intensity_2d.py  intensity_3d.py  kinematics_2d.py  kinematics_3d.py  opacity_mcdisk_3d.py  opacity_smdisk_3d.py  spectral_mcdisk_3d.py  spectral_smdisk_2d.py  spectral_smdisk_3d.py  traits.py
src/gbkfit/native/: CMakeLists.txt
src/gbkfit/native/cmake/: Findfftw3.cmake
src/gbkfit/native/gbkfit/include/gbkfit/: common.hpp
src/gbkfit/native/gbkfit/include/gbkfit/dmodel/: dmodels.hpp
src/gbkfit/native/gbkfit/include/gbkfit/gmodel/: disks.hpp  traits.hpp  traits_uids.hpp
src/gbkfit/native/gbkfit/include/gbkfit/math/: math.hpp
src/gbkfit/native/gbkfit_cuda/: CMakeLists.txt
src/gbkfit/native/gbkfit_cuda/include/gbkfit/cuda/: dmodels.hpp  gmodels.hpp  kernels.hpp  kernels_main.hpp  objective.hpp  wrapper.hpp
src/gbkfit/native/gbkfit_cuda/include/gbkfit/drivers/cuda/: cufft.hpp  dmodels.hpp  gmodels.hpp  kernels_main.hpp  wrapper.hpp
src/gbkfit/native/gbkfit_cuda/src/: bindings.cpp  dmodels.cpp  gmodels.cpp  wrapper.cu
src/gbkfit/native/gbkfit_host/: CMakeLists.txt
src/gbkfit/native/gbkfit_host/include/gbkfit/drivers/host/: dmodels.hpp  kernels_main.hpp  kernels_math.hpp  kernels_misc.hpp  kernels_traits.hpp
src/gbkfit/native/gbkfit_host/include/gbkfit/host/: dmodels.hpp  gmodels.hpp  kernels.hpp  kernels_common.hpp  kernels_main.hpp  kernels_math.hpp  kernels_misc.hpp  kernels_traits.hpp  objective.hpp
src/gbkfit/native/gbkfit_host/src/: bindings.cpp  dmodels.cpp  gmodels.cpp  objective.cpp
src/gbkfit/native/gbkfit_openmp/: CMakeLists.txt
src/gbkfit/native/gbkfit_openmp/include/gbkfit/openmp/: dmodels.hpp  fftw3.hpp  gmodels.hpp  kernels_common.hpp  kernels_main.hpp  kernels_math.hpp  kernels_misc.hpp  kernels_traits.hpp
src/gbkfit/native/gbkfit_openmp/src/: bindings.cpp  dmodels.cpp
src/gbkfit/objective/: __init__.py  _detail.py  evaluate.py  goodness.py  model.py  objective.py  residual.py
src/gbkfit/params/: __init__.py  core.py  descs.py  expressions.py  interpreter.py  params.py  paramutils.py  parsers.py  pdescs.py  symbols.py  utils.py
src/gbkfit/psflsf/: __init__.py  core.py  psflsf.py
src/gbkfit/psflsf/lsfs/: __init__.py  lsfs.py
src/gbkfit/psflsf/psflsfs/: __init__.py
src/gbkfit/psflsf/psfs/: __init__.py  psfs.py
src/gbkfit/psflsfs/: lsfmodels.py  psfmodels.py
src/gbkfit/tasks/: _detail.py  eval.py  fit.py  plot.py  prep.py
src/gbkfit/utils/: fitsutils.py  funcutils.py  iterutils.py  miscutils.py  numutils.py  parseutils.py  stringutils.py  timeutils.py  typeutils.py
tests/: test_math.py  test_psflsf.py
tests/interactive/: math.py  math_2.py
tests/unit/: foobar.py  test_dataset.py  test_dmodel.py  test_driver.py  test_math.py  test_misc.py  test_params.py  test_prior.py  test_psflsf.py
tools/cicd/linux/: bootstrap.sh  build.sh  publish.sh  test.sh
tools/cicd/macos/: bootstrap.sh  build.sh  publish.sh
tools/cicd/sdist/: bootstrap.sh  publish.sh
(+79 files in other folders)
